--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "remixicon": "^2.5.0",
     "simple-react-validator": "^1.6.1",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.0.20",
     "webpack": "^5.55.0",
