--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "pdf-image": "2.0.0",
     "pdfjs-dist": "2.6.347",
     "pspdfkit": "^2021.5.3",
+    "qrcode.react": "^1.0.1",
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
@@ -90,6 +91,7 @@
     "react-phone-input-2": "^2.14.0",
     "react-player": "^2.9.0",
     "react-pro-sidebar": "^0.7.1",
+    "react-qr-code": "^2.0.3",
     "react-quilljs": "^1.2.17",
     "react-read-pdf": "^2.0.9",
     "react-redux": "^7.2.4",
