--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "draft-js": "^0.11.7",
     "embla-carousel": "^5.0.1",
     "file-saver": "^2.0.5",
+    "firebase": "^9.6.1",
     "gulp": "4.0.2",
     "html-to-image": "^1.9.0",
     "html2canvas": "^1.3.2",
@@ -53,6 +54,7 @@
     "leaflet": "^1.7.1",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet-geosearch": "^3.6.0",
+    "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "next": "^11.1.2",
