--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ckeditor/ckeditor5-upload": "^30.0.0",
     "@emotion/react": "^11.4.0",
     "@splidejs/react-splide": "^0.5.3",
+    "@svg-maps/indonesia": "^1.0.0",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
@@ -56,6 +57,7 @@
     "leaflet-geosearch": "^3.6.0",
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
+    "mapbox-gl": "^2.6.1",
     "moment": "^2.29.1",
     "next": "^11.1.2",
     "next-absolute-url": "^1.2.2",
