--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
     "mapbox-gl": "^2.6.1",
+    "millify": "^4.0.0",
     "moment": "^2.29.1",
     "next": "^11.1.2",
     "next-absolute-url": "^1.2.2",
